--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,18 @@
     <artifactId>gson</artifactId>
     <version>2.8.5</version>
 </dependency>
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.6.1</version>
+    <scope>compile</scope>
+</dependency>
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger-ui</artifactId>
+    <version>2.6.1</version>
+    <scope>compile</scope>
+</dependency>
 
 
 	</dependencies>
